{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 11,
  "lineage": "44bae35c-9625-5b49-a04f-ddbb7cdeb2d6",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "c23",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:129033205317:vpc/vpc-08c6b21a04bd32897",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-09c4c53bbb4ef56a6",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-026a7201f48953bf2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "c23-VPC"
                ]
              }
            ],
            "id": "vpc-08c6b21a04bd32897",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-094e8852265a2a458",
            "owner_id": "129033205317",
            "region": "eu-west-2",
            "tags": {
              "Name": "c23-VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "c23_alex_guo_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0685f8dd865c8e389",
            "arn": "arn:aws:ec2:eu-west-2:129033205317:instance/i-0691928558ea0fea3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0691928558ea0fea3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "c23-alex-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0bef07a4284a52c08"
              }
            ],
            "primary_network_interface_id": "eni-0bef07a4284a52c08",
            "private_dns": "ip-10-0-1-40.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.40",
            "public_dns": "ec2-18-170-60-111.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.170.60.111",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09db275f4c10547ae",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0678fc725e502c0db",
            "tags": {
              "Name": "c23_alex_guo_ec2"
            },
            "tags_all": {
              "Name": "c23_alex_guo_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0debff26e5d0a96b5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "129033205317",
            "id": "i-0691928558ea0fea3",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_security_group.c23_alex_ec2_miniproject_sg",
            "data.aws_vpc.c23"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "c23_alex_ec2_miniproject_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:129033205317:security-group/sg-0debff26e5d0a96b5",
            "description": "Security group for Alex EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0debff26e5d0a96b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Flask app",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "45.146.9.30/32"
                ],
                "description": "Allow SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "c23_alex_ec2_miniproject_sg",
            "name_prefix": "",
            "owner_id": "129033205317",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "c23_alex_ec2_miniproject_sg"
            },
            "tags_all": {
              "Name": "c23_alex_ec2_miniproject_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c6b21a04bd32897"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "129033205317",
            "id": "sg-0debff26e5d0a96b5",
            "region": "eu-west-2"
          },
          "dependencies": [
            "data.aws_vpc.c23"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:129033205317:security-group-rule/sgr-0953d1dce717befb5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0953d1dce717befb5",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-2",
            "security_group_id": "sg-0debff26e5d0a96b5",
            "security_group_rule_id": "sgr-0953d1dce717befb5",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "129033205317",
            "id": "sgr-0953d1dce717befb5",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_security_group.c23_alex_ec2_miniproject_sg",
            "data.aws_vpc.c23"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_flask",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:129033205317:security-group-rule/sgr-07b84176cb19b2d75",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow Flask app",
            "from_port": 5000,
            "id": "sgr-07b84176cb19b2d75",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-2",
            "security_group_id": "sg-0debff26e5d0a96b5",
            "security_group_rule_id": "sgr-07b84176cb19b2d75",
            "tags": null,
            "tags_all": {},
            "to_port": 5000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "129033205317",
            "id": "sgr-07b84176cb19b2d75",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_security_group.c23_alex_ec2_miniproject_sg",
            "data.aws_vpc.c23"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:129033205317:security-group-rule/sgr-0000a5285660e3ae2",
            "cidr_ipv4": "95.214.229.28/32",
            "cidr_ipv6": null,
            "description": "Allow SSH access",
            "from_port": 22,
            "id": "sgr-0000a5285660e3ae2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-2",
            "security_group_id": "sg-0debff26e5d0a96b5",
            "security_group_rule_id": "sgr-0000a5285660e3ae2",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "129033205317",
            "id": "sgr-0000a5285660e3ae2",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_security_group.c23_alex_ec2_miniproject_sg",
            "data.aws_vpc.c23"
          ]
        }
      ]
    }
  ]
}